uncomment writer test and fix argLine issue