@@ -45,6 +45,8 @@
       **com/rte_france/antares/datamanager_back/PegaseBackApplication.java,
       **/com/rte_france/antares/datamanager_back/service/impl/SearchCriteria.java
     </sonar.exclusions>
+    <!--    For Apache Arrow -->
+    <argLine>--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED</argLine>
   </properties>
   <dependencies>
     <dependency>
@@ -242,9 +244,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M9</version>
-<!--        <configuration>-->
-<!--          <argLine>&#45;&#45;add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED</argLine>-->
-<!--        </configuration>-->
       </plugin>
     </plugins>
   </build>
